# serializer version: 1
# name: test_iteration_listeners_unsupported[anderson]
  "Iteration listeners are only supported for the methods: (<QuasiNewtonMethod.BROYDEN1: 'broyden1'>, <QuasiNewtonMethod.BROYDEN2: 'broyden2'>), not for anderson."
# ---
# name: test_iteration_listeners_unsupported[df-sane]
  "Iteration listeners are only supported for the methods: (<QuasiNewtonMethod.BROYDEN1: 'broyden1'>, <QuasiNewtonMethod.BROYDEN2: 'broyden2'>), not for df-sane."
# ---
# name: test_iteration_listeners_unsupported[diagbroyden]
  "Iteration listeners are only supported for the methods: (<QuasiNewtonMethod.BROYDEN1: 'broyden1'>, <QuasiNewtonMethod.BROYDEN2: 'broyden2'>), not for diagbroyden."
# ---
# name: test_iteration_listeners_unsupported[excitingmixing]
  "Iteration listeners are only supported for the methods: (<QuasiNewtonMethod.BROYDEN1: 'broyden1'>, <QuasiNewtonMethod.BROYDEN2: 'broyden2'>), not for excitingmixing."
# ---
# name: test_iteration_listeners_unsupported[hybr]
  "Iteration listeners are only supported for the methods: (<QuasiNewtonMethod.BROYDEN1: 'broyden1'>, <QuasiNewtonMethod.BROYDEN2: 'broyden2'>), not for hybr."
# ---
# name: test_iteration_listeners_unsupported[krylov]
  "Iteration listeners are only supported for the methods: (<QuasiNewtonMethod.BROYDEN1: 'broyden1'>, <QuasiNewtonMethod.BROYDEN2: 'broyden2'>), not for krylov."
# ---
# name: test_iteration_listeners_unsupported[linearmixing]
  "Iteration listeners are only supported for the methods: (<QuasiNewtonMethod.BROYDEN1: 'broyden1'>, <QuasiNewtonMethod.BROYDEN2: 'broyden2'>), not for linearmixing."
# ---
# name: test_iteration_listeners_unsupported[lm]
  "Iteration listeners are only supported for the methods: (<QuasiNewtonMethod.BROYDEN1: 'broyden1'>, <QuasiNewtonMethod.BROYDEN2: 'broyden2'>), not for lm."
# ---
